--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html{
 body{
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-image: url("img/vivid-blurred-colorful-wallpaper-background.jpg");
+    background-image: url("../img/vivid-blurred-colorful-wallpaper-background.jpg");
 }
 
 :root{
