--- a/css/music.css
+++ b/css/music.css
@@ -5,7 +5,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-image: url("/img/music\ background.jpg");
+    background-image: url("../img/music\ background.jpg");
     background-size: cover;
     background-repeat: repeat;
     color:var(--font-clr);
