--- a/css/novel.css
+++ b/css/novel.css
@@ -1,6 +1,6 @@
 body{
     margin:0;
-    background-image: url("img/wallpaperflare.com_wallpaper-modified.jpg");
+    background-image: url("../img/wallpaperflare.com_wallpaper-modified.jpg");
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: antiquewhite;
 }
